--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ description: "Awesome things I have done."
 logo: chicken
 teaser: chicken
 locale: en
-url: http://www-personal.umich.edu/~timtu/site
+url: https://chunchentu.github.io
 #url: http://127.0.0.1:4000/ 
 feed:
   path: atom.xml
